--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 --back-color: #2F303A;
 --color-link-footer:  rgba(255, 255, 255, 0.6);
 --color-adress: #ffffff;
+--color-back-section: #F5F4FA;
 }
 
 body {
@@ -23,6 +24,10 @@ body {
 
 .list{
     list-style: none;
+    padding: 0px;
+    margin: 0px;
+
+    
 }
 
  
@@ -30,11 +35,22 @@ body {
  .link:focus {
      color: var(--color-blue);
  }
+.conterner {
+    width: 1200px;
+    display: flex;
+    align-items: center
+}
 
+.section {
+    padding: 94px 94;
+}
 /* Логотип */
 
 
 .logo{
+        
+        margin-left: auto;
+
         font-family: 'Raleway';
         font-weight: 700;
         font-size: 26px;
@@ -55,12 +71,36 @@ color: var(--color-secondary);
 
 /* Верх */
 
-
 .header{
+     
             font-weight: 500;
             font-size: 14px;
             line-height: 16px;
             letter-spacing: 0.02em;
+}
+
+
+.nav{
+    display: flex;
+}
+
+.nav-list{
+    display: flex;
+    
+    
+}
+
+.nav-item{
+    margin-right: 50px;
+   
+}
+
+.nav-item:last-child{
+    margin-right: 0px;
+}
+
+.nav-item:first-child{
+    margin-left: 93px;
 }
 
  .nav-list{
@@ -69,11 +109,24 @@ color: var(--color-secondary);
 
  }
 
+ .contacts-list{
+     display: flex;
+     margin-left: auto;
+ }
 
+.contacts-item:not(:last-child){
+    margin-right: 50px;
+    
+}
+
+
+
+ 
   /* Баннер */
 
   .banner {
       background-color: var(--back-color);
+      text-align: center;
   }
 
 
@@ -88,6 +141,13 @@ color: var(--color-secondary);
   }
 
 .button{
+    
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border: var(--color-blue);
+        padding: 10px 32px;
+
+
     cursor: pointer;
     font-family: 'Roboto';
     font-weight: 700;
@@ -116,6 +176,71 @@ color: var(--color-secondary);
 
 
 }
+
+.list-text{
+   margin-left: auto;
+   margin-right: auto;
+
+}
+
+.item-text{
+    margin-right: 30px;
+    margin-top: 89px;
+   
+}
+
+
+
+.item-text:last-child{
+    margin-right: 0px;
+}
+
+
+.robota{
+    margin-top: 94px;
+}
+
+
+.photo{
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 94px;
+    
+}
+
+.photo-item{
+    margin-right: 30px;
+    margin-top: 50px;
+}
+
+
+.photo-item:last-child{
+    margin-right: 0px;
+}
+
+
+
+
+.section-comand{
+    background-color: var(--color-back-section)
+}
+
+
+.comand-list{
+margin-left: auto;
+margin-right: auto;
+padding-bottom: 94px;
+}
+
+.comand-item {
+margin-right: 30px;
+
+}
+
+.comand-item:last-child{
+    margin-right: 0px;
+}
+
 .title-team{
     font-weight: 500;
     font-size: 16px;
