--- a/css/styles.css
+++ b/css/styles.css
@@ -376,13 +376,26 @@ background-color: var(--color-adress);
 }
 
 .conterner-procets{
-    flex-basis: calc(100%-30px/3);
+    
     margin-top: 50px;
     display: flex;
      flex-wrap: wrap;
+     margin-left: auto;
+     margin-right: auto;
     
 }
 
 .procets-item{
+    
+    padding-bottom: 20px;
     margin-right: 30px;
+    margin-bottom: 30px;
+    border: 1px solid #EEEEEE;
+}
+.procets-item:nth-child(3n){
+    margin-right: 0px;
+}
+.procets-item:nth-last-child(-n+3){
+   margin-bottom: 0px;
+
 }
