--- a/css/styles.css
+++ b/css/styles.css
@@ -25,12 +25,21 @@ body {
 .list{
     list-style: none;
     padding: 0px;
-    margin: 0px;
+    
 
     
 }
 
- h2,h3,li,p{
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+margin: 0px;
+
+}
+
+h1,h2,h3,ul,p{
+    padding: 0px;
    margin: 0px;
 
  }
@@ -38,9 +47,13 @@ body {
  .link:focus {
      color: var(--color-blue);
  }
-.conterner {
+.container {
     width: 1200px;
-    align-items: center
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 .section {
@@ -52,7 +65,6 @@ body {
 
 .logo{
         
-        margin-left: 215px;
 
         font-family: 'Raleway';
         font-weight: 700;
@@ -75,7 +87,8 @@ color: var(--color-secondary);
 /* Верх */
 
 .header{
-     
+            border-bottom: 1px solid #ECECEC;
+
             font-weight: 500;
             font-size: 14px;
             line-height: 16px;
@@ -85,11 +98,20 @@ color: var(--color-secondary);
 }
 
 
+.header-container{
+    display: flex;
+    align-items: center;
+}
+
 .nav{
     display: flex;
-    padding-bottom: 32px;
-    border-bottom: 1px solid #ECECEC;
-    margin-bottom: 5px;
+    align-items: center;
+    
+}
+
+
+.header .logo{
+    margin-right: 93px;
 }
 
 .nav-list{
@@ -103,12 +125,8 @@ color: var(--color-secondary);
    
 }
 
-.nav-item:last-child{
-    margin-right: 0px;
-}
-
-.nav-item:first-child{
-    margin-left: 93px;
+.nav-item:not(:last-child){
+    margin-right: 50px;
 }
 
  .nav-list{
@@ -127,18 +145,32 @@ color: var(--color-secondary);
     
 }
 
-
+.nav-link, .contacts{
+    display: flex;
+    align-items: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
 
  
   /* Баннер */
 
   .banner {
+      padding-bottom: 200px;
+     padding-top: 200px;
+     margin-bottom: 30px;
+
       background-color: var(--back-color);
       text-align: center;
   }
 
 
+  
+
   .title-banner{
+    margin-bottom: 30px;
+
+    
         font-weight: 900;
         font-size: 44px;
         line-height: 1.36;
@@ -187,41 +219,55 @@ color: var(--color-secondary);
 
 .list-text{
     display: flex;
-   margin-left: auto;
-   margin-right: auto;
-   margin-top: 0px;
+    width: 1200px;
+     margin-bottom: -15px;
+     margin-left: -15px;
+   
+   
 
 }
 
 .item-text{
-    margin-right: 30px;
+    width: 270px;
+   margin: 15px;
     
-   
+    
 }
-
-
 
 .item-text:last-child{
-    margin-right: 0px;
+margin-right: 0px;
+
 }
+
+
 
 .text{
     margin-top: 10px;
+
 }
 
 
-.photo{
+.photo .title-section{
+    padding-top: 0px;
+    margin-bottom: 50px;
+}
+
+
+.photo-list{
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: -15px;
+    margin-bottom: -15px;
+
+    
     
     
     
 }
 
 .photo-item{
-    margin-right: 30px;
-    margin-top: 50px;
+    width: 370px;
+    margin: 15px;
+   
 }
 
 
@@ -238,15 +284,16 @@ color: var(--color-secondary);
 
 
 .comand-list{
+    
     display: flex;
-margin-left: auto;
-margin-right: auto;
-
+    margin-left: -15px;
+    margin-bottom: -15px;
+    margin-top: -15px;
 }
 
 .comand-item {
-    margin-right: 30px;
-    padding-bottom: 30px;
+    width: 270px;
+    margin: 15px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
@@ -261,6 +308,8 @@ background-color: var(--color-adress);
 
 
 .title-team{
+     margin-bottom: 10px;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -280,6 +329,11 @@ background-color: var(--color-adress);
     text-align: center;
 }
 
+
+.comand-conteiner{
+ padding: 30px;
+}
+
 .title{
        margin: 0px;
 
@@ -291,6 +345,8 @@ background-color: var(--color-adress);
 }
 
 .title-section{
+         margin-bottom: 50px;
+
         font-weight: 700;
         font-size: 36px;
         line-height: 1.16;
@@ -323,11 +379,13 @@ background-color: var(--color-adress);
     color: var(--color-link-footer);
 }
 
-.adress{
-
-    margin-left: 215px;
+.footer .logo{
+    margin-bottom: 20px;
 }
 
+.contacts-item-footer:not(:last-child){
+    margin-bottom: 9px;
+}
 
 /* Портфолио */
 
@@ -350,6 +408,7 @@ background-color: var(--color-adress);
 .button-list {
     display: flex;
     justify-content: center;
+    margin-bottom: 34px;
 }
 
 .button-list-item{
@@ -361,7 +420,10 @@ background-color: var(--color-adress);
 }
 
 .title-procets{
-        
+            margin-bottom: 4px;
+            margin-top: 20px;
+            margin-left: 24px;
+
         font-weight: 700;
         font-size: 18px;
         line-height: 2;
@@ -370,32 +432,40 @@ background-color: var(--color-adress);
 
 
 .procets-text{
+    margin-left: 24px;
+    margin-bottom: 20px;
+     
+
     font-size: 16px;
     line-height: 1.87;
 
 }
 
-.conterner-procets{
+.list-procets{
     
-    margin-top: 50px;
+    width: 1200px;
     display: flex;
      flex-wrap: wrap;
-     margin-left: auto;
-     margin-right: auto;
+     margin: -15px;
+     
     
 }
 
 .procets-item{
-    
-    padding-bottom: 20px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    border: 1px solid #EEEEEE;
+     width: 370px;
+    margin: 15px;
 }
+
+.procets-item:nth-last-child(-n+3){
+    margin-bottom: 0px;
+}
+
 .procets-item:nth-child(3n){
     margin-right: 0px;
 }
-.procets-item:nth-last-child(-n+3){
-   margin-bottom: 0px;
 
+
+.border-procets{
+    border: 1px solid #EEEEEE;
+   
 }
