--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,6 @@ body {
 
 .list{
     list-style: none;
-    padding: 0px;
     
 
     
@@ -34,7 +33,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-margin: 0px;
+
 
 }
 
@@ -120,10 +119,7 @@ color: var(--color-secondary);
     
 }
 
-.nav-item{
-    margin-right: 50px;
-   
-}
+
 
 .nav-item:not(:last-child){
     margin-right: 50px;
@@ -158,7 +154,6 @@ color: var(--color-secondary);
   .banner {
       padding-bottom: 200px;
      padding-top: 200px;
-     margin-bottom: 30px;
 
       background-color: var(--back-color);
       text-align: center;
@@ -169,8 +164,10 @@ color: var(--color-secondary);
 
   .title-banner{
     
-     
+     max-width: 696px;
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 
        
         font-weight: 900;
@@ -223,19 +220,33 @@ color: var(--color-secondary);
 
 }
 
+
+.card{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+}
+
+
+.card-item{
+    margin-right: 30px;
+    margin-top: 30px;
+}
+
 .list-text{
     display: flex;
-    width: 1200px;
-     margin-bottom: -15px;
-     margin-left: -15px;
+    flex-wrap: wrap;
+    
+     
    
    
 
 }
 
 .item-text{
-    width: 270px;
-   margin: 15px;
+    
+   flex-basis: calc(100% / 4 - 30px);
     
     
 }
@@ -253,27 +264,21 @@ margin-right: 0px;
 }
 
 
+.photo-section{
+    padding-top: 0px;
+}
+
 .photo .title-section{
     padding-top: 0px;
     margin-bottom: 50px;
 }
 
 
-.photo-list{
-    display: flex;
-    margin-left: -15px;
-    margin-bottom: -15px;
 
-    
-    
-    
-    
-}
 
 .photo-item{
-    width: 370px;
-    margin: 15px;
-   
+   flex-basis: calc(100% / 3 -30px);
+    
 }
 
 
@@ -285,21 +290,17 @@ margin-right: 0px;
 
 
 .section-comand{
+    padding-top: 0px;
     background-color: var(--color-back-section)
 }
 
 
-.comand-list{
+
     
-    display: flex;
-    margin-left: -15px;
-    margin-bottom: -15px;
-    margin-top: -15px;
-}
+   
 
 .comand-item {
-    width: 270px;
-    margin: 15px;
+    flex-basis: calc(100% / 4 -30px);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
@@ -327,6 +328,7 @@ background-color: var(--color-adress);
 .text-comand {
     font-size: 16px;
     line-height: 1.18;
+    color: var(--color-secondary);
 }
 
 
@@ -366,7 +368,8 @@ background-color: var(--color-adress);
 /* Низ */
 
 .footer{
-
+   padding-top: 60px;
+   padding-bottom: 60px;
     background-color: var(--back-color);
 }
 
@@ -386,6 +389,7 @@ background-color: var(--color-adress);
 }
 
 .footer .logo{
+    display: block;
     margin-bottom: 20px;
 }
 
@@ -411,24 +415,24 @@ background-color: var(--color-adress);
     text-align: center;
 }
 
+.button-portfolio:hover,
+.button-portfolio:focus{
+    color: var(--color-blue);
+}
+
 .button-list {
     display: flex;
     justify-content: center;
     margin-bottom: 34px;
 }
 
-.button-list-item{
+.button-list-item:not(:last-child){
     margin-right: 8px;
 }
 
-.button-list-item:last-child{
-    margin-right: 0px;
-}
 
 .title-procets{
             margin-bottom: 4px;
-            margin-top: 20px;
-            margin-left: 24px;
 
         font-weight: 700;
         font-size: 18px;
@@ -438,27 +442,18 @@ background-color: var(--color-adress);
 
 
 .procets-text{
-    margin-left: 24px;
-    margin-bottom: 20px;
-     
+    
+    
 
     font-size: 16px;
     line-height: 1.87;
 
 }
 
-.list-procets{
-    
-    width: 1200px;
-    display: flex;
-     flex-wrap: wrap;
-     margin: -15px;
-     
-    
-}
+
 
 .procets-item{
-     width: 370px;
+     flex-basis: calc(100% / 3 - 30px);
     margin: 15px;
 }
 
@@ -473,5 +468,6 @@ background-color: var(--color-adress);
 
 .border-procets{
     border: 1px solid #EEEEEE;
+    padding: 20px 24px;
    
 }
